Update project authors with IDs in index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <h1>Welcome to Our Cloud Project</h1>
-    <p>This project was made by: <strong>Mahmoud & Hafiz Murayr</strong>.</p>
+    <p>This project was made by: <strong>Mahmoud Murayr ID:202508075 & Hafiz Murayr:202507395</strong>.</p>
     <p>I hope that we did a good work here :)</p>
   </body>
 </html>
