--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </header>
 
     <div class="container">
-        <img src="https://upload.wikimedia.org/wikipedia/ar/7/7a/Jazan_University_Logo.svg" alt="Jazan University Logo">
+        <img src="logo.png" alt="Jazan University Logo">
 
         <section>
             <h2>What is Cloud Computing?</h2>
